--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "water-life",
+  "homepage": "https://water.life.flexdevske.co.ke/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
